# SYsU-lang

./: CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml
generator/: README.md  main.cc
grammar/: README.md  main.cc
lexer/: README.md
librarian/lib/: CMakeLists.txt
librarian/lib/sysy/: sylib.cc
optimizer/: README.md  main.cc
parser/: CMakeLists.txt  README.md  parser.y
tester/functional-0/: CMakeLists.txt
tester/functional-1/: CMakeLists.txt
tester/functional-2/: CMakeLists.txt
tester/functional-3/: CMakeLists.txt
tester/mini-performance/: CMakeLists.txt
tester/performance/: CMakeLists.txt
